# actix-sea-demo

./: Cargo.toml  log4rs.yml
src/: main.rs
src/entities/: user.rs
src/migrator/: m20221012_000001_init.rs  m20221012_000002_add_password.rs  mod.rs
