[package]
edition = "2021"
name = "actix-sea-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.17"
log4rs = "1.1.1"
sea-orm = {version = "^0", features = ["sqlx-sqlite", "runtime-actix-rustls", "macros"]}
sea-orm-migration = "^0.9.0"
serde = { version = "1.0", features = ["derive"] }